--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,10 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.3.3"{{#router}},
+    "vue": "^2.3.3",
+    "foundation-sites": "^6.3.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6"{{#router}},
     "vue-router": "^2.3.1"{{/router}}
   },
   "devDependencies": {
